Fixed some gradle issues