@@ -124,7 +124,7 @@ public class CommandUtils {
 					SubcommandData data = new SubcommandData(o.getName(), o.getDescription());
 					if (!o.getOptions().isEmpty()) data.addOptions(toOptionData(o.getOptions()));
 					return data;
-				}).toList();
+				}).collect(Collectors.toList());
 	}
 
 	/**
@@ -139,7 +139,7 @@ public class CommandUtils {
 					SubcommandGroupData data = new SubcommandGroupData(o.getName(), o.getDescription());
 					if (!o.getSubcommands().isEmpty()) data.addSubcommands(toSubcommandData(o.getSubcommands()));
 					return data;
-				}).toList();
+				}).collect(Collectors.toList());
 	}
 
 	/**
@@ -161,7 +161,7 @@ public class CommandUtils {
 					if (!o.getChoices().isEmpty()) data.addChoices(o.getChoices());
 					if (!o.getChannelTypes().isEmpty()) data.setChannelTypes(o.getChannelTypes());
 					return data;
-				}).toList();
+				}).collect(Collectors.toList());
 	}
 
 	/**
